welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:1: error: Missing closing brace `}' assumed here
def arrayCount9(nums:Array[Int]): Int = {
^