welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
var T = new Array[Integer](9);